# Market-options-stocks-Scanner

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIA-REFERENCIA-RAPIDA.md  LICENSE  PROJECT_CONFIG.md  PROJECT_CONFIG_TEMPLATE.md  README.md  WORKFLOW_STATE.md  docker-compose.yml  opencode.json.example  options_strategy_module_blueprint.md  package.json  plan_migracion_modulo_tecnico.md  pnpm-lock.yaml  pyproject.toml
.antigravity/skills/: order-management-skill.md  realtime-data-skill.md  security-auth-skill.md  trading-terminal-master.md
.cursor/rules/: 00-master.mdc  000-master-rule.mdc  01-backend-python.mdc  010-architecture.mdc  02-data-models.mdc  020-security.mdc  03-frontend-nextjs.mdc  030-realtime-data.mdc  04-data-hub.mdc  040-vibecoding-workflow.mdc  05-async-events.mdc  050-testing.mdc  060-git-workflow.mdc  070-ui-components.mdc  080-python-backend.mdc  090-database.mdc  100-exchange-integration.mdc  110-error-handling.mdc  120-deployment.mdc
.docs/: CICD.md  SECURITY.md
.docs/backend/: 01-deep-funnel.md  02-data-hub.md  03-python-standards.md  04-data-modeling.md  05-async-event-engine.md
.docs/frontend/: 01-scope.md  02-design-system.md  03-clean-code.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
Archivosenmigracion/: catalyst_nlp_engine.py  chain_analytics_history.py  cm_math.py  cnn_fear_greed.py  confluence_models.py  cor3m_engine.py  correlation_analyzer.py  cross_asset_engine.py  delta_weighted_flow_engine.py  derivatives.py  dex_engine.py  expected_move_engine.py  factor_calibration.py  feedback_engine.py  fvg_engine.py  hmm_engine.py  lob_dynamics_engine.py  markov_regime_engine.py  multimodal_predictive.py  ofi_engine.py  options.py  options_confluence.py  options_flow_signal.py  options_models.py  parametric_optimizer.py  probabilistic_engine.py  quantum_alpha.py  regime_weights.py  sentiment_engine.py  shadow_delta_engine.py  smc.py  smc_fractal_engine.py  speed_instability_engine.py  squeeze_engine.py  strategy_payoff.py  vol_term_engine.py  volatility_skew_engine.py  volume_node_engine.py  volume_oi_engine.py  volume_profile.py  (+7 more)
FundingBaseDoc/: 05_funding_builder_myfundedfutures.md  FUNDING_MODULE_ROADMAP_MAESTRO_v3.md  FUNDING_RISK_METRICS_FRAMEWORK.md  mejoras_roadmap_funding_module.md
backend/: main.py  observability.py
backend/api/: bootstrap.py  contracts.py  router.py
backend/audit/: __init__.py  audit_complex_store.py  hooks.py  middleware.py  process_recorder.py  structured_logger.py
backend/backtesting/: __init__.py  base.py  fill_models.py  fundamentals_backtester.py  gex_backtester.py  predictive_backtester.py  slippage_models.py  strategy_trainer.py  technical_backtester.py
backend/bus/: event_bus.py
backend/config/: __init__.py  alpaca_eod_config.py  alpaca_institutional_config.py  alpaca_options_route_config.py  alpaca_priority_route.py  alpaca_r1_options_calibrated.json  alpaca_r1_options_scoring_config.py  alpaca_r2_scoring_config.py  api_health_check.py  bayesian_kelly_calibration.py  bingx_exit_bucket_policy.py  bingx_flow_desk_calibration.py  bingx_gex_wall_stop_calibration.py  bingx_hybrid_motors_calibration.py  bingx_options_combiner_calibration.py  bingx_risk_sizing_v2_calibration.py  bot_relaxed_thresholds.py  builder_contracts.yaml  builder_contracts_loader.py  cache_thresholds.py  dark_pool_calibration.py  dual_bot_core_universe.py  equity_l2_watchlist.py  execution_policy.py  funding_accounts.yaml  funding_accounts_loader.py  funding_thresholds.py  logger_setup.py  omni_engine.yaml  options_defined_risk.py  options_strategy_loader.py  options_universe.yaml  phase_thresholds.py  (+7 more)
docs/: FUNDING_MODULE.md  FUNDING_MODULE_EXPEDIENTE.md  fase1_contrato_canonico.md  mapa_mejora_modulo_05_funding.md
frontend/: .env.local.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
(+1286 files in other folders)
