[tool.poetry]
name = "deep-funnel-station"
version = "0.1.0"
description = "Deep Trading Terminal - Funnel Station Quantitative Engine"
authors = ["Antigravity Agent"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
redis = "^5.0.7"
httpx = "^0.27.0"
websockets = "^12.0"
aiohttp = "^3.9.5"
duckdb = "^1.1.3"
pandas = "^2.2.0"
scipy = "^1.12.0"
pandas-ta = "^0.4.71b0"
orjson = "^3.10.0"
joblib = "^1.4.0"
scikit-learn = "^1.4.0"
starlette = "^1.3.0"
pyyaml = "^6.0.3"




[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.4.0"
ruff = "^0.6.9"
mypy = "^1.10.0"
black = "^26.3.1"
bandit = "^1.9.4"
pip-audit = "^2.10.0"
types-pyyaml = "^6.0.12.20260518"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    "*.md",
    ".gemini",
    "brain",
    "node_modules",
    ".venv",
    "venv"
]

[tool.ruff.lint]
# Reglas básicas y recomendadas para proyectos profesionales
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF"   # Ruff-specific rules
]
ignore = ["E402", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/unit/test_bjerksund_stensland.py" = ["N806", "N803", "E741"]
"tests/unit/test_greeks_calculator.py" = ["N806", "N803"]
"backend/quant_engine/math/options/bjerksund_stensland.py" = ["N803", "E741"]
"backend/quant_engine/math/options/bjerksund_stensland_greeks.py" = ["N803"]
"backend/services/bot/bingx_bot_execution_mixin.py" = ["F403", "F405", "RUF006"]
"backend/services/bot/bingx_bot_risk_mixin.py" = ["F403", "F405"]
"backend/services/bot/bingx_bot_exits_mixin.py" = ["F403", "F405"]
"backend/quant_engine/engines/hybrid/*.py" = [
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF005",
    "RUF012",
    "SIM102",
    "SIM108",
    "SIM110",
    "E712",
    "F841",
    "B007",
    "N806",
]
"tests/unit/test_bingx_decision_combiner_bridge.py" = ["RUF012"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "backend/quant_engine/engines/hybrid"]
skips = ["B608"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
show_error_codes = true
plugins = ["pydantic.mypy"]
